# boruto

./: Cargo.toml  LICENSE  README.md
app/: settings.gradle
app/app/: build.gradle
app/app/src/androidTest/java/com/example/boruto_app/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/example/boruto_app/: MainActivity.kt
app/app/src/main/java/com/example/boruto_app/ui/dashboard/: DashboardFragment.kt  DashboardViewModel.kt
app/app/src/main/java/com/example/boruto_app/ui/home/: HomeFragment.kt  HomeViewModel.kt
app/app/src/main/java/com/example/boruto_app/ui/notifications/: NotificationsFragment.kt  NotificationsViewModel.kt
app/app/src/main/res/layout/: activity_main.xml
app/app/src/main/res/navigation/: mobile_navigation.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/test/java/com/example/boruto_app/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
src/: main.rs  manager.rs  protocol.rs  server.rs
web/: package.json
web/src/: App.vue
