[package]
name = "boruto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.35.1", features = ["full"] }
windows = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
